--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,7 @@
-/* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+  --PressStart2P: PressStart2P;
+  --Inter-Variable: Inter-Variable;
+  --main-weight: 400;
+  --title-weight: 700;
+  --section-size: 50dvi;
+}
