--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,3 @@
-/* Здесь вы напишете основную часть стилей страницы.
-
-Будьте внимательны! Для корректной работы скриптов на этом сайте нужно, чтобы в HTML некоторые классы были названы особым образом:
-✦ like-icon — для svg-иконки анимированного сердца
-✦ card__like-button — для кнопки Like рядом с иконкой
-✦ card__icon-button — для кнопки, оборачивающей иконку
-✦ card__icon-button — для кнопки, оборачивающей иконку
-✦ is-liked — для обозначения состояния лайкнутой иконки в виде сердца
-✦ button__text — для обозначения текстового элемента внутри кнопки
-
-*/
-
 .page {
   font-family: var(--Inter-Variable), "Inter", sans-serif;
   min-inline-size: 320px;
@@ -25,6 +13,47 @@
 .container {
   margin: 0 auto;
   max-inline-size: var(--section-size);
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #000;
+  font-family: var(--PressStart2P), sans-serif;
+  background-color: transparent;
+  line-height: 0.9em;
+  transition: box-shadow 0.3s ease;
+  position: relative;
+  overflow: hidden;
+}
+
+.button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0px 0px #000;
+  transition: box-shadow 0.3s ease;
+}
+
+.button::after {
+  content: "";
+  inline-size: 100%;
+  block-size: 100%;
+  background-color: #000;
+  position: absolute;
+  transform: translateX(-100%);
+  transition: 0.5s ease-in-out;
+}
+
+.button:hover::after {
+  transform: translateX(0);
+  transition: 0.5s ease-in-out;
+}
+
+.button .button__text {
+  color: var(--button-text-color);
+  position: relative;
+  z-index: 1;
+  mix-blend-mode: difference;
 }
 
 .header {
@@ -143,45 +172,46 @@
   margin: 0 25px 25px;
 }
 
-.card-button {
+.card__icon-button {
   border: none;
   background-color: transparent;
   cursor: pointer;
+  padding: 0;
+  border: 2px solid transparent;
+  transition: border 0.3s ease;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  transition: border 0.3s ease;
+  border: 2px solid #000;
 }
 
 .button-like {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 2px solid #000;
   padding-inline: 37px;
-  font-family: var(--PressStart2P), sans-serif;
-  line-height: 0.9em;
   min-block-size: 38px;
   min-inline-size: 130px;
 }
 
 .button-save {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-  border: 2px solid #000;
   padding-inline: 20px;
-  font-family: var(--PressStart2P), sans-serif;
-  font-size: 14px;
-  line-height: 0.9em;
   background-color: #fff;
   min-block-size: 51px;
   min-inline-size: 335px;
-  margin-block-end: 103px;
-  cursor: pointer;
+  margin: 0 auto 103px;
 }
 
 .button-save__image {
   margin-inline-end: 8px;
   block-size: 21px;
   inline-size: 21px;
+  color: #fff;
+  mix-blend-mode: difference;
+  position: relative;
+  z-index: 1;
 }
 
 .dialog {
@@ -215,13 +245,9 @@
 }
 
 .dialog__button {
-  border: 2px solid #000;
   inline-size: 100%;
-  font-family: var(--PressStart2P), sans-serif;
   text-transform: uppercase;
   padding-block: 12.5px;
-  background-color: transparent;
-  cursor: pointer;
 }
 
 @media (width <= 375px) {
