--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,4 +5,7 @@
   --title-weight: 700;
   --section-size: 50dvi;
   --text-shadow-color: #fff;
+  --button-text-color: #fff;
+  --contour-color: #000;
+  --main-heart-color: #ff0000;
 }
