--- a/styles/animations.css
+++ b/styles/animations.css
@@ -17,12 +17,12 @@
 }
 
 .card__icon-button:hover .core {
-  fill: #000;
+  fill: var(--accent-color);
   transition: fill 0.3s;
 }
 
 .card__icon-button:hover .main-body {
-  fill: #000;
+  fill: var(--accent-color);
   transition: fill 0.3s 0.05s;
 }
 
@@ -57,8 +57,8 @@
 }
 
 .like-icon.is-liked .heart {
-  animation: heart 0.3s 0.1s ease-in;
   transform-origin: center;
+  animation: heart 0.3s 0.1s ease-in;
 }
 
 .like-icon.is-liked .core {
