--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,13 @@
 .page {
   font-family: var(--Inter-Variable), "Inter", sans-serif;
-  min-inline-size: 320px;
-  min-block-size: 100dvb;
-  font-variation-settings: "wght" 400;
   background-image: repeating-linear-gradient(transparent 0, #d3d3d3 2px),
     repeating-linear-gradient(90deg, transparent 0, #d3d3d3 2px),
     linear-gradient(#e7e7e7, #1a1a1a);
   background-size: cover;
   background-attachment: fixed;
+  min-inline-size: 320px;
+  min-block-size: 100dvb;
+  font-variation-settings: "wght" 400;
 }
 
 .container {
@@ -16,49 +16,49 @@
 }
 
 .button {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 2px solid #000;
-  font-family: var(--PressStart2P), sans-serif;
-  background-color: transparent;
-  line-height: 0.9em;
-  transition: box-shadow 0.3s ease;
-  position: relative;
+  border: 2px solid var(--accent-color);
   overflow: hidden;
+  font-family: var(--PressStart2P), sans-serif;
+  line-height: 0.9em;
+  background-color: transparent;
+  transition: box-shadow 0.3s ease;
 }
 
 .button:focus {
+  box-shadow: 2px 2px 0px 0px var(--accent-color);
   outline: none;
-  box-shadow: 2px 2px 0px 0px #000;
   transition: box-shadow 0.3s ease;
 }
 
 .button::after {
   content: "";
+  position: absolute;
+  background-color: var(--accent-color);
+  transition: 0.5s ease-in-out;
+  transform: translateX(-100%);
   inline-size: 100%;
   block-size: 100%;
-  background-color: #000;
-  position: absolute;
-  transform: translateX(-100%);
-  transition: 0.5s ease-in-out;
 }
 
 .button:hover::after {
-  transform: translateX(0);
   transition: 0.5s ease-in-out;
+  transform: translateX(0);
 }
 
 .button .button__text {
-  color: var(--button-text-color);
   position: relative;
   z-index: 1;
+  color: var(--button-text-color);
   mix-blend-mode: difference;
 }
 
 .header {
   margin-block: 100px;
-  border: 2px solid #000;
+  border: 2px solid var(--accent-color);
   padding-block: 128px;
   text-align: center;
   background-color: #fff;
@@ -108,7 +108,7 @@
 
 .card {
   margin-bottom: 50px;
-  border: 2px solid #000;
+  border: 2px solid var(--accent-color);
   background-color: #fff;
 }
 
@@ -126,28 +126,28 @@
 
 .card-label {
   position: absolute;
-  right: 25px;
   top: 25px;
-  mix-blend-mode: hard-light;
+  right: 25px;
   opacity: 50%;
+  font-family: var(--PressStart2P), sans-serif;
   font-size: 14px;
   line-height: 1em;
-  font-family: var(--PressStart2P), sans-serif;
   text-shadow: -1px 0 var(--text-shadow-color), 0 1px var(--text-shadow-color),
     1px 0 var(--text-shadow-color), 0 -1px var(--text-shadow-color);
+  mix-blend-mode: hard-light;
 }
 
 @supports (text-stroke: 1px var(--text-shadow-color)) or
   (-webkit-text-stroke: 1px var(--text-shadow-color)) {
   .card-label {
+    text-shadow: none;
     -webkit-text-stroke: 1px var(--text-shadow-color);
     text-stroke: 1px var(--text-shadow-color);
-    text-shadow: none;
   }
 }
 
 .card-image {
-  border-block: 2px solid #000;
+  border-block: 2px solid var(--accent-color);
   inline-size: 100%;
 }
 
@@ -156,8 +156,8 @@
 }
 
 .card-text {
-  line-height: 1.2em;
   font-size: 18px;
+  line-height: 1.2em;
   text-shadow: 1px 1px var(--text-shadow-color);
 }
 
@@ -174,11 +174,11 @@
 
 .card__icon-button {
   border: none;
-  background-color: transparent;
-  cursor: pointer;
-  padding: 0;
   border: 2px solid transparent;
+  padding: 0;
+  background-color: transparent;
   transition: border 0.3s ease;
+  cursor: pointer;
 }
 
 .card__icon-button:focus {
@@ -186,8 +186,8 @@
 }
 
 .card__icon-button:focus-visible {
+  border: 2px solid var(--accent-color);
   transition: border 0.3s ease;
-  border: 2px solid #000;
 }
 
 .button-like {
@@ -197,21 +197,21 @@
 }
 
 .button-save {
+  margin: 0 auto 103px;
   padding-inline: 20px;
   background-color: #fff;
   min-block-size: 51px;
   min-inline-size: 335px;
-  margin: 0 auto 103px;
 }
 
 .button-save__image {
-  margin-inline-end: 8px;
-  block-size: 21px;
-  inline-size: 21px;
-  color: #fff;
-  mix-blend-mode: difference;
   position: relative;
   z-index: 1;
+  margin-inline-end: 8px;
+  color: #fff;
+  block-size: 21px;
+  inline-size: 21px;
+  mix-blend-mode: difference;
 }
 
 .dialog {
@@ -219,14 +219,14 @@
 }
 
 .dialog::backdrop {
-  background-color: #000;
   opacity: 75%;
+  background-color: var(--accent-color);
 }
 
 .dialog__info {
-  margin-block-end: 30px;
   display: flex;
   align-items: center;
+  margin-block-end: 30px;
 }
 
 .dialog__image {
@@ -236,18 +236,18 @@
 }
 
 .dialog__title {
-  max-inline-size: 234px;
   font-family: var(--PressStart2P), sans-serif;
+  font-weight: var(--main-weight);
   font-size: 14px;
   line-height: 1.5em;
-  font-weight: var(--main-weight);
   text-transform: uppercase;
+  max-inline-size: 234px;
 }
 
 .dialog__button {
-  inline-size: 100%;
-  text-transform: uppercase;
   padding-block: 12.5px;
+  text-transform: uppercase;
+  inline-size: 100%;
 }
 
 @media (width <= 375px) {
@@ -271,8 +271,8 @@
   }
 
   .dialog {
-    inline-size: 100%;
     margin-inline: 17px;
+    inline-size: 100%;
   }
 
   .dialog__title {
