--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,6 +4,7 @@
   --main-weight: 400;
   --title-weight: 700;
   --section-size: 50dvi;
+  --accent-color: #000;
   --text-shadow-color: #fff;
   --button-text-color: #fff;
   --contour-color: #000;
